deploy/k8s/base/order-consumer-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-consumer-service
  labels:
    app.kubernetes.io/name: order-consumer-service
    app.kubernetes.io/part-of: kubereats
    app.kubernetes.io/component: worker
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: order-consumer-service
    app.kubernetes.io/part-of: kubereats
  ports:
    - name: metrics
      port: 9100
      targetPort: metrics
