deploy/k8s/base/order-consumer-service/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: order-consumer-service
  labels:
    app.kubernetes.io/name: order-consumer-service
    app.kubernetes.io/part-of: kubereats
    app.kubernetes.io/component: worker
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: order-consumer-service
      app.kubernetes.io/part-of: kubereats
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 9100
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - to:
        - ipBlock:
            cidr: 10.96.0.0/12
        - ipBlock:
            cidr: 192.168.16.0/20
      ports:
        - protocol: TCP
          port: 5432
        - protocol: TCP
          port: 5433
